# esmtranslationlib

./: .gitmodules  CMakeLists.txt  esmdefines.hpp
esmtranslationlib/: arguments.hpp  esmdata.hpp  generator.cpp  generator.hpp  loader.cpp  loader.hpp  textholder.cpp  textholder.hpp  textinfo.hpp  texts.cpp  texts.hpp  translationrecord.cpp  translationrecord.hpp  translationstate.cpp  translationstate.hpp  writer.cpp  writer.hpp
mwtextlib/: arguments.hpp  esmdata.hpp  generator.cpp  generator.hpp  loader.cpp  loader.hpp  textholder.cpp  textholder.hpp  textinfo.hpp  texts.cpp  texts.hpp  translationrecord.cpp  translationrecord.hpp  translationstate.cpp  translationstate.hpp  writer.cpp  writer.hpp
